--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="main">
+      <!-- navBar Start -->
       <nav class="navbar">
         <div class="logo">
           <img
@@ -18,11 +19,17 @@
           />
         </div>
         <div class="btn">
-          <button class="lightbtn">English</button>
+          <select class="lightbtn">
+            <option>English</option>
+            <option>Hindi</option>
+          </select>
+
           <button class="sm-redbtn">Sign in</button>
         </div>
       </nav>
+      <!-- navBar end -->
       <div class="box"></div>
+      <!-- Hero section start -->
       <div class="hero">
         <span> Enjoy big movies, hit series and more from ₹ 149. </span>
         <span> Join today. Cancel anytime. </span>
@@ -34,6 +41,7 @@
           <button>Get Started &gt;</button>
         </div>
       </div>
+      <!--Hero section end -->
     </div>
     <div class="separation"></div>
     <section>
@@ -45,7 +53,7 @@
             players and more.</span
           >
         </div>
-        <div class="secimg">
+        <div class="secimg secImg_video1st">
           <img
             src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png"
             alt=""
@@ -102,7 +110,7 @@
     <div class="separation"></div>
     <section>
       <div class="first sec4th">
-        <div class="secimg">
+        <div class="secimg secImg4th">
           <img
             src="https://occ-0-2849-3646.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d"
             alt=""
