--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section>
       <div class="first">
         <div class="text">
-          <span>Enjoy on your TV </span>
+          <div>Enjoy on your TV </div>
           <span
             >Watch on smart TVs, PlayStation, Xbox, Chromecast,Apple TV, Blu-ray
             players and more.</span
@@ -76,7 +76,7 @@
           />
         </div>
         <div class="text text2nd">
-          <span>Download your shows to watch offline</span>
+          <div>Download your shows to watch offline</div>
           <span
             >Save your favourites easily and always have something to
             watch.</span
@@ -88,7 +88,7 @@
     <section>
       <div class="first sec3rd">
         <div class="text text3rd">
-          <span>Watch everywhere </span>
+          <div>Watch everywhere </div>
           <span
             >Stream unlimited movies and TV shows on your phone, tablet, laptop,
             and TV.</span
@@ -117,7 +117,7 @@
           />
         </div>
         <div class="text text4th">
-          <span>Create profiles for kids</span>
+          <div>Create profiles for kids</div>
           <span
             >Send children on adventures with their favourite characters in a
             space made just for them—free with your membership.</span
@@ -245,7 +245,7 @@
 
     <footer>
       <div class="foter">
-        <small>Questions? Call 000-800-919-1694</small>
+        <small class="QusTion">Questions? Call 000-800-919-1694</small>
         <div class="links">
           <div class="link">
             <a href="">Investor Relations</a>
